--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <h1>Hello. This is basic GPGPU implementation of Scrypt</h1>
+    <h3>Hello. This is basic GPGPU implementation of Scrypt</h3>
     <script src="jquery-1.10.2.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="util.js" type="text/javascript" charset="utf-8"></script>
     <script>
-        var debug = true;
+        var debug = false;
         var textureSize = 1024;
         var header = "02000000ff1fd715a981626682fd8d73afda09d825722d6ba5f665b1be6ed400242f7b650c3623c0f087fefdeefcd4c84d916a511551425fabaf52d55d5596498ba5f869f139d55346e2021b00000000";
         var nonce = 4238017280;
